# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

set(LFL_PNG 1)

if(LFL_ANDROID)
 set(LFL_GLES2 1)
elseif(LFL_IPHONE)
 set(LFL_GLES2 1)
else(LFL_ANDROID)
 set(LFL_CAMERA 1)
 set(LFL_OPENCV 1)
 set(LFL_FFMPEG 1)
 set(LFL_GLEW 1)
 set(LFL_GLFWINPUT 1)
 set(LFL_GLFWVIDEO 1)
 set(LFL_PORTAUDIO 1)
 if(NOT WIN32)
 set(LFL_GLOG 1)
 set(LFL_LAME 1)
 set(LFL_X264 1)
 endif(NOT WIN32)
endif(LFL_ANDROID)

lfl_project(fv)
add_subdirectory(../lfapp ${CMAKE_CURRENT_BINARY_DIR}/lfapp_obj)
add_definitions(${LFAPP_DEF})
include_directories(${LFAPP_INCLUDE})

if(LFL_ANDROID)
add_library(fv fv.cpp)
else(LFL_ANDROID)
add_executable(fv fv.cpp ${LFL_RECOGNITION_SOURCE} ${SDL_MAIN})
target_link_libraries(fv ${LFAPP_LIB})
endif(LFL_ANDROID)

