# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

lfl_clear_projects()
set(LFL_FREETYPE 1)
set(LFL_ASSIMP 1)
set(LFL_PNG 1)

if(LFL_ANDROID)
    set(LFL_GLES2 1)
elseif(LFL_IPHONE)
    set(LFL_GLES2 1)
else(LFL_ANDROID)
    set(LFL_GLES2 1)
    set(LFL_GLOG 1)
    set(LFL_GLFWINPUT 1)
    set(LFL_GLFWVIDEO 1)
    set(LFL_FFMPEG 1)
    set(LFL_LAME 1)
    set(LFL_X264 1)
endif(LFL_ANDROID)

lfl_project(image)
add_subdirectory(../lfapp ${CMAKE_CURRENT_BINARY_DIR}/lfapp_obj)
add_definitions(${LFAPP_DEF})
include_directories(${LFAPP_INCLUDE})

if(LFL_ANDROID)
    add_library(image image.cpp)
else(LFL_ANDROID)
    add_executable(image image.cpp)
    target_link_libraries(image ${LFAPP_LIB})
endif(LFL_ANDROID)
lfapp_post_build_start(image LImage)

include_directories(${GTEST_INCLUDE})
add_executable(gl_tests gl_tests.cpp)
target_link_libraries(gl_tests ${LFAPP_LIB} ${GTEST_LIB})
add_dependencies(gl_tests image)
lfapp_post_build_copy_bin(gl_tests LImage)
